--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Node.js library for code comments LiveComment // ["
+title: "d08ble GitHub"
 base_url: "/d08ble.github.io" # http://jekyllrb.com/docs/github-pages/#project-page-url-structure
 defaults:
   - scope: {path: ""}
