--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,8 @@ defaults:
   - scope: {path: ""}
     values:
       layout: "page"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 markdown: kramdown
+highlighter: rouge
+lsi:         false
+excerpt_separator: "\n\n"
+
