--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ defaults:
   - scope: {path: ""}
     values:
       layout: "page"
-markdown: kramdown
-highlighter: rouge
-lsi:         false
-excerpt_separator: "\n\n"
+#markdown: kramdown
+#highlighter: rouge
+#lsi:         false
+#excerpt_separator: "\n\n"
 
